--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an aspiring student looking to further my career in the coding scene.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Kennesaw, Georgia</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Details here...</p>
       <h1>What's your dream job?</h1>
