completion of details written in about me

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>Kennesaw, Georgia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Coding, Computer Building, Cooking, and Computer Repair</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Probably something to do with machine learning or application development. At this stage I honestly don't know yet.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Kennesaw, Georgia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Ever since I've dipped my toes into the world of coding I've enjoyed building projects through pure knowledge. The first programs I created were basic batch files I wrote in textpad. The purpose of the programs were to open as many google chromes as possible to see if I could crash the computer lab computers. Suprisingly it worked well and was always a good prank to run on a victim when they went to the bathroom. Since then I have tried out python and took a class on computer science in which we learned a little html and I loved it. Overall, I feel like the next step is to try out different coding languages and see if web development sounds like something I could do career wise.</p>
     </section>
 
     <footer id="footer">
